<resources>
    <string name="app_name">RTU BLE v2.6</string>
    <string name="device">Device:</string>
    <string name="no_device">&lt;Select a device&gt;</string>
    <string name="select_device">Select a device</string>
    <string name="status">Status</string>
    <string name="llsWrite">LinkLossAlert</string>
    <string name="iasWrite">ImmediateAlert</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="no_ble_devices">No LE devices found.</string>
    <string name="connected">已连接</string>
    <string name="disconnected">未连接</string>
    <string name="ready">Ready</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">连接蓝牙设备</string>
    <string name="unpair">unpair</string>
    <string name="pair">pair</string>
    <string name="RadioButton1">Alert level high</string>
    <string name="RadioButton2">Alert level mid</string>
    <string name="RadioButton3">Stop alerting</string>
    <string name="SystemId">SystemId</string>
    <string name="ModelNumber">ModelNumber</string>
    <string name="SerialNumber">SerialNumber</string>
    <string name="FirmwareRevision">FirmwareRevision</string>
    <string name="HardwareRevision">HardwareRevision</string>
    <string name="SoftwareRevision">SoftwareRevision</string>
    <string name="ManufactureName">ManufactureName</string>
    <string name="RegCertDataList">RegCertDataList</string>
    <string name="ManufactureId">    ManufactureId</string>
    <string name="BatteryLevel">    Battery Level</string>
    <string name="OrgId">    OrganizationId</string>
    <string name="Txpower">    Txpower Level</string>
    <string name="Noupdate">    No Update</string>
    <string name="ReadTxPower">ReadTxPower</string>
    <string name="high_alert">HIGH Alert triggered!</string>
    <string name="low_alert">LOW Alert triggered!</string>
    <string name="writeTxnoti">TxNoti</string>
    <string name="readRssi">Read Rssi Value</string>
    <string name="Readdummy">D Read</string>
    <string name="removeBond">Remove Bond</string>
    <string name="paired">paired</string>
    <string name="popup_title">Quit nRF UART?</string>
    <string name="popup_message">Do you want to quit this Application?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="scan">Scan</string>
    <string name="cancel">Cancel</string>
    <string name="refresh_time">刷新时间（将RTU时间同步成手机时间）</string>
    <string name="local_time">本地时间</string>
    <string name="clear_temp_data">清除临时数据</string>
    <string name="show_data">显示数据（采集传感器并显示）</string>
    <string name="params_settings">参数设置</string>
    <string name="params_entirety">整体参数</string>
    <string name="params_sensor">传感器设置</string>
    <string name="params_communication">通讯设置</string>
    <string name="params_video">视频设置</string>
    <string name="params_internal_dtu">内置DTU设置</string>
    <string name="params_import">导入参数</string>
    <string name="params_upload">上传参数</string>
    <string name="params_save">保存参数</string>
    <string name="area_code">省市地区代码</string>
    <string name="addr_encoding">地址编码格式</string>
    <string name="station_type_rainfall">降水</string>
	<string name="station_type">本机测站类型</string>
	<string name="station_no">本机测站编号</string>
	<string name="work_style">工作运行模式</string>
	<string name="power_time">定时上电时间</string>
	<string name="rainfull_time">雨量日起始时间</string>
	<string name="hyetometer">雨量计分辨力</string>
	<string name="evaporating">蒸发皿分辨力</string>
	<string name="stream_count_step">流量计数步长</string>
	<string name="interval_storage">数据存储间隔</string>
	<string name="interval_sampling">采样加报间隔</string>
	<string name="catagory_report">查询/自报设置</string>
	<string name="report_types">自报种类</string>
	<string name="query_types">查询种类</string>
	<string name="general_settings">基本参数设置</string>
	<string name="timer_reporter">定时报</string>
	<string name="self_reporter_type">定时自报类型</string>
	<string name="self_reporter_interval">定时自报间隔</string>
	<string name="catagory_timer_repoter">水资源分种类定时报（单位：分钟）</string>
	<string name="hour_report">水文规约小时报</string>
	<string name="add_report_immediately">有雨立即加报</string>
	<string name="add_report">水文规约报警加报</string>
	<string name="equation_report">水文规约均匀报</string>
	<string name="catagory_report_settings">查询/自报种类</string>
	<string name="catagory_rainfull">雨量</string>
	<string name="catagory_water_level">水位</string>
	<string name="catagory_velocity">流速</string>
	<string name="catagory_gate_position">闸位</string>
	<string name="catagory_capacity">功率</string>
	<string name="catagory_air_pressure">气压</string>
	<string name="catagory_water_temperature">水温</string>
	<string name="catagory_water_quality">水质</string>
	<string name="catagory_soil_moisture">墒情</string>
	<string name="catagory_evaporation">蒸发</string>
	<string name="catagory_water_pressure">水压</string>
	<string name="catagory_others">其他</string>
	<string name="catagory_water_flow">流量/水量</string>
	<string name="catagory_wind_direction_speed">风速/风向</string>
	<string name="catagory_statue">警报/状态</string>
	<string name="show_rtu_time">RTU 时间</string>
	<string name="show_fram_count">FRAM分区数</string>
	<string name="show_catagory">显示</string>
	<string name="sensor_channels_catagory_title">传感器采集通道</string>
	<string name="sensor_channels_switch">通道开关</string>
	<string name="sensor_channels1">通道1</string>
	<string name="sensor_channels2">通道2</string>
	<string name="sensor_channels3">通道3</string>
	<string name="sensor_channels4">通道4</string>
	<string name="sensor_channels5">通道5</string>
	<string name="sensor_channels6">通道6</string>
	<string name="sensor_channels7">通道7</string>
	<string name="sensor_channels8">通道8</string>
	<string name="sensor_channels9">通道9</string>
	<string name="sensor_channels10">通道10</string>
	<string name="sensor_channels11">通道11</string>
	<string name="sensor_channels12">通道12</string>
	<string name="sensor_channels13">通道13</string>
	<string name="sensor_channels14">通道14</string>
	<string name="sensor_channels15">通道15</string>
	<string name="sensor_channels16">通道16</string>
	<string name="sensor_preheat_time">传感器预热时间</string>
	<string name="whole_params_settings">全局参数设置</string>
	<string name="communication_protocal">通讯协议</string>
	<string name="compact_protocal"> 子协议</string>
	<string name="response_time">响应时间</string>
	<string name="uniform_receipt">均匀回执</string>
	<string name="uniform_interval">均匀间隔</string>
	<string name="communication_password">通讯密码</string>
	<string name="bias_time">偏置时间</string>
	<string name="heartbeat_func">心跳功能</string>
	<string name="heartbeat_interval">心跳间隔</string>
	<string name="center_address1">中心1地址</string>
	<string name="center_address2">中心2地址</string>
	<string name="center_address3">中心3地址</string>
	<string name="center_address4">中心4地址</string>
	<string name="RS485">RS485</string>
	<string name="RS232_1">RS232_1</string>
	<string name="RS232_2">RS232_2</string>
	<string name="RS232_3">RS232_3</string>
	<string name="gather_channel_settings">采集通道设置</string>
	<string name="main_channel_settings">主信道设置</string>
	<string name="communication_way">通讯模式</string>
	<string name="communication_speed">通讯速率</string>
	<string name="preheat_time">预热时间</string>
	<string name="backup_channel_settings">备用信道设置</string>
	<string name="tsm_func">TSM 功能</string>
	<string name="video_switch">视频功能</string>
	<string name="video_open">视频已启用</string>
	<string name="video_off">视频已关闭</string>
	<string name="opened">开启</string>
	<string name="closed">关闭</string>
	<string name="shooting_interval">拍摄间隔</string>
	<string name="send_interval">发送间隔</string>
	<string name="image_format">图像格式</string>
	<string name="rs485_address">RS485 地址</string>
	<string name="camera_rate">摄像机波特率</string>
	<string name="camera_model">摄像机型号</string>
	<string name="execute_time">预置点执行时间</string>
	<string name="shoot_location1">拍摄位置1</string>
	<string name="shoot_location2">拍摄位置2</string>
	<string name="shoot_location3">拍摄位置3</string>
	<string name="shoot_location4">拍摄位置4</string>
	<string name="transform_interval">最大传输间隔</string>
	<string name="channel_ip_address">IP地址</string>
	<string name="channel_port">端口号</string>
	<string name="import_params">导入参数</string>
	<string name="upload_params">上传参数</string>
	<string name="save_params">保存参数</string>
	<string name="tsm_summary_off">TSM 功能未启用</string>
	<string name="tsm_summary_on">TSM 功能已启用</string>
	<string name="tsm_switch_on">启用</string>
	<string name="tsm_switch_off">不启用</string>
	<string name="catagoray_report_switch">水资源分种类定时报</string>
	<string name="timer_report_switch">定时报</string>
	<string name="settings">设置</string>
	<string name="data_settings">参数设置</string>
	<string name="btn_switch">切换发送</string>
	<string name="btn_clear_list">清空列表</string>
	<string name="per_wan">/万</string>
	<string name="data_ratio">数据系数</string>
	<string name="warning_added">警报与加报</string>
	<string name="data_definition">数据定义</string>
	<string name="gather_catagory">采集类型</string>
	<string name="gather_number">同类编号</string>
	<string name="warning_max">报警上限</string>
	<string name="warning_min">报警下限</string>
	<string name="added_divide">加报分界线</string>
	<string name="added_divide_max">分界线上阈值</string>
	<string name="added_divide_min">分界线下阈值</string>
	<string name="data_baseline">数据基数</string>
	<string name="data_correction">数据修正</string>
	<string name="wave_rate">浪涌滤波</string>
	<string name="data_zero">数据零位</string>
	<string name="sensor_settings">传感器设置</string>
	<string name="device_model">设备型号</string>
	<string name="gather_duration">采集时长</string>
	<string name="second">秒</string>
	<string name="verify_way">验证方式</string>
	<string name="communication_address">通讯地址</string>
	<string name="data_mark">数据标定</string>
	<string name="manual_correction">人工修正</string>
	<string name="progress_downloading">正在下载...</string>
	<string name="wave_check">载波检测</string>
	<string name="uniform_switch_on">需要</string>
	<string name="uniform_switch_off">不需要</string>
	<string name="heartbeat_switch_on">打开</string>
	<string name="heartbeat_switch_off">关闭</string>
	<string name="channal_settings1">通道1 设置</string>
	<string name="gprs1">GPRS 1</string>
	<string name="gprs2">GPRS 2</string>
	<string name="gprs3">GPRS 3</string>
	<string name="gprs4">GPRS 4</string>
	<string name="channal_settings2">通道2 设置</string>
	<string name="channal_settings3">通道3 设置</string>
	<string name="channal_settings4">通道4 设置</string>
	<string name="download_params">下载参数</string>
	<string name="local_time_summery">20%1$s/%2$s/%3$s  %4$s:%5$s:%6$s  %7$s</string>
	<string name="toast_clear_succed">清除数据成功！</string>
	<string name="toast_refresh_succed">刷新时间成功！</string>
	<string name="tennal_closed">关闭</string>
	<string name="tennal_failed">招测失败</string>
	<string name="toast_err_ip">ip 格式错误</string>
	<string name="toast_upload_succed">参数上传成功</string>
	<string name="toast_connected_failed">请检查设备蓝牙连接</string>
	<string name="message_show_datas">正在下载显示数据...</string>
	<string name="message_upload_params">正在上传数据...</string>
	<string name="unit_name_second">秒</string>
	<string name="unit_name_minute">分</string>
	<string name="unit_name_hour">时</string>
	<string name="show_cache_menu">show cache</string>
	<string name="preheat_time_backup">预热时间</string>
	<string name="shutdown">关闭</string>
	<string name="report_now">雨量立即报</string>
	<string name="dipper">北斗中心</string>
	<string name="toast_save_params">参数已保存至文件夹: /内置存储/RFUART</string>
	<string name="hint_enter_params_name">请输入文件名称</string>
	<string name="communication_parity_check">奇偶效验</string>
	<string name="switch_on">开启</string>
	<string name="switch_off">关闭</string>
</resources>