<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <!--   <SwitchPreference 
        android:title="@string/catagoray_report_switch"
        android:key="catagoray_report_switch"
        /> -->
    <EditTextPreference 
        android:key="catagory_rainfull"
        android:title="@string/catagory_rainfull"
        />
    <EditTextPreference 
        android:key="catagory_water_level"
        android:title="@string/catagory_water_level"
        />
    <EditTextPreference 
        android:key="catagory_velocity"
        android:title="@string/catagory_velocity"
        />
    <EditTextPreference 
        android:key="catagory_gate_position"
        android:title="@string/catagory_gate_position"
        />
    <EditTextPreference 
        android:key="catagory_capacity"
        android:title="@string/catagory_capacity"
        />
    <EditTextPreference 
        android:key="catagory_air_pressure"
        android:title="@string/catagory_air_pressure"
        />
    <EditTextPreference 
        android:key="catagory_water_temperature"
        android:title="@string/catagory_water_temperature"
        />
    <EditTextPreference 
        android:key="catagory_water_quality"
        android:title="@string/catagory_water_quality"
        />
    <EditTextPreference 
        android:key="catagory_soil_moisture"
        android:title="@string/catagory_soil_moisture"
        />
    <EditTextPreference 
        android:key="catagory_evaporation"
        android:title="@string/catagory_evaporation"
        />
    <EditTextPreference 
        android:key="catagory_water_pressure"
        android:title="@string/catagory_water_pressure"
        />
    <EditTextPreference 
        android:key="catagory_others"
        android:title="@string/catagory_others"
        />
    <EditTextPreference 
        android:key="catagory_water_flow"
        android:title="@string/catagory_water_flow"
        />
    <EditTextPreference 
        android:key="catagory_wind_direction_speed"
        android:title="@string/catagory_wind_direction_speed"
        />
    <EditTextPreference 
        android:key="catagory_statue"
        android:title="@string/catagory_statue"
        />
</PreferenceScreen>

