<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/show_catagory">
        <Preference 
            android:key="show_rtu_time"
            android:title="@string/show_rtu_time"
            android:defaultValue="0"
            android:summary="00-00-00 星期日 00：00：00"
            />
        <Preference 
            android:key="show_fram_count"
            android:title="@string/show_fram_count"
            android:defaultValue="0"
            android:summary="0"
            />
    </PreferenceCategory>
	<PreferenceCategory android:title="@string/catagory_report">
	    <PreferenceScreen android:title="@string/catagory_report_settings">
	        
	    <MultiSelectListPreference 
	        android:key="report_types"
	        android:title="@string/report_types"
	        android:entries="@array/report_types"
	        android:entryValues="@array/report_type_values"
	        />
	    <MultiSelectListPreference 
	        android:key="query_types"
	        android:title="@string/query_types"
	        android:entries="@array/query_types"
	        android:entryValues="@array/query_type_values"
	        />
	    </PreferenceScreen>
	    <com.nordicsemi.nrfUARTv2.SwitchPreference
	        android:key="timer_reporter"
	        android:title="@string/timer_reporter"
	        android:widgetLayout="@layout/preference_switch"
	        android:fragment="com.nordicsemi.nrfUARTv2.SwitchFragment"
	        />
	    <com.nordicsemi.nrfUARTv2.SwitchPreference
	        android:key="catagory_timer_repoter"
	        android:title="@string/catagory_timer_repoter"
	        android:widgetLayout="@layout/preference_switch"
	        android:fragment="com.nordicsemi.nrfUARTv2.SwitchFragment"
	        />
	    <com.nordicsemi.nrfUARTv2.SwitchEditTextPreference
	        android:key="add_report"
	        android:title="@string/add_report"
	        android:widgetLayout="@layout/preference_switch"
	        />
	    <com.nordicsemi.nrfUARTv2.SwitchEditTextPreference
	        android:key="equation_report"
	        android:title="@string/equation_report"
	        android:widgetLayout="@layout/preference_switch"
	        />
	    <com.nordicsemi.nrfUARTv2.SwitchEditTextPreference
	        android:key="hour_report"
	        android:title="@string/hour_report"
	        android:widgetLayout="@layout/preference_switch"
	        />
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/general_settings">
    <EditTextPreference 
        android:key="area_code"
        android:title="@string/area_code"
        />
    <ListPreference 
        android:key="addr_encoding"
        android:title="@string/addr_encoding"
        android:entries="@array/addr_encoding_entries"
        android:entryValues="@array/addr_encoding_entry_values"
        android:defaultValue="0"
        />
    <EditTextPreference 
        android:key="station_no"
        android:title="@string/station_no"
        />
    <ListPreference 
        android:key="station_type"
        android:title="@string/station_type"
        android:entries="@array/station_type"
        android:entryValues="@array/station_type_values"
        />
    <ListPreference 
        android:key="interval_storage"
        android:title="@string/interval_storage"
        android:entries="@array/interval"
        android:entryValues="@array/interval_values"
        />
    <ListPreference 
        android:key="interval_sampling"
        android:title="@string/interval_sampling"
        android:entries="@array/interval"
        android:entryValues="@array/interval_values"
        />
    <ListPreference 
        android:key="work_style"
        android:title="@string/work_style"
        android:entries="@array/work_style"
        android:entryValues="@array/work_style_values"
        />
	<ListPreference 
	    android:key="power_time"
	    android:title="@string/power_time"
	    android:entries="@array/power_time"
	    android:entryValues="@array/power_time_values"
	    />
	<ListPreference 
	    android:key="rainfull_time"
	    android:title="@string/rainfull_time"
	    android:entries="@array/rainfull_time"
	    android:entryValues="@array/rainfull_time_values"
	    />
	<ListPreference 
	    android:key="hyetometer"
	    android:title="@string/hyetometer"
	    android:entries="@array/hyetometer"
	    android:entryValues="@array/hyetometer_values"
	    />
	<ListPreference 
	    key="evaporating"
	    android:title="@string/evaporating"
	    android:entries="@array/evaporating"
	    android:entryValues="@array/evaporating_values"
	    />
	<EditTextPreference 
	    android:key="stream_count_step"
	    android:title="@string/stream_count_step"
	    />
	</PreferenceCategory>
</PreferenceScreen>
